test/io/sungeun/ioerror.ENOMEM.good
ioerror.chpl:7: error: uncaught error - syserr: Cannot allocate memory ENOMEM
